--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <a href="#accueil" class="hover:text-green-400 py-2 transition-all duration-300">Accueil</a>
             <a href="#actions" class="hover:text-green-400 py-2 transition-all duration-300">Nos actions</a>
             <a href="#association" class="hover:text-green-400 py-2 transition-all duration-300">L’association</a>
-            <a href="#equipe" class="hover:text-green-400 py-2 transition-all duration-300">L’équipe</a>
+<!--            <a href="#equipe" class="hover:text-green-400 py-2 transition-all duration-300">L’équipe</a>-->
             <a href="#agenda" class="hover:text-green-400 py-2 transition-all duration-300">Agenda</a>
-            <a href="#documentation" class="hover:text-green-400 py-2 transition-all duration-300">Documentation</a>
+<!--            <a href="#documentation" class="hover:text-green-400 py-2 transition-all duration-300">Documentation</a>-->
         </nav>
 
         <!-- Mobile Burger Menu -->
@@ -41,40 +41,220 @@
             <a href="#accueil" class="hover:text-green-400 py-2">Accueil</a>
             <a href="#actions" class="hover:text-green-400 py-2">Nos actions</a>
             <a href="#association" class="hover:text-green-400 py-2">L’association</a>
-            <a href="#equipe" class="hover:text-green-400 py-2">L’équipe</a>
+<!--            <a href="#equipe" class="hover:text-green-400 py-2">L’équipe</a>-->
             <a href="#agenda" class="hover:text-green-400 py-2">Agenda</a>
-            <a href="#documentation" class="hover:text-green-400 py-2">Documentation</a>
+<!--            <a href="#documentation" class="hover:text-green-400 py-2">Documentation</a>-->
         </div>
     </div>
 </header>
 
 <!-- Spacer to account for the fixed header height -->
 <div id="header-spacer" class="h-40"></div>
+<!-- Section Accueil -->
+<section id="accueil" class="bg-white py-16">
+    <div class="container mx-auto px-4 text-center">
+        <!-- Titre principal -->
+        <h1 class="text-2xl md:text-4xl font-bold text-green-700 mb-6">
+            L'Atelier Citoyen Durable et Coopératif
+        </h1>
+        <!-- Texte descriptif -->
+        <p class="text-gray-700 text-base md:text-lg leading-relaxed mb-8">
+            L'Atelier Citoyen Durable et Coopératif (ACDC) est une association née en 2024 à Bouchemaine, de l'initiative d'habitants passionnés par la protection de l'environnement et l'engagement citoyen. L'ACDC a pour vocation de promouvoir des actions concrètes pour une transition écologique et une consommation plus responsable, en s'appuyant sur des initiatives locales et la mobilisation collective.
+        </p>
+        <p class="text-gray-700 text-base md:text-lg leading-relaxed mb-8">
+            Nos activités incluent des <strong>Repair Cafés</strong> pour donner une nouvelle vie aux objets du quotidien, des ateliers de <strong>jardinage écologique</strong> pour apprendre à cultiver dans le respect de la nature, ainsi que des événements comme des <strong>conférences</strong>, des <strong>rencontres</strong> autour du zéro déchet, et des <strong>échanges de savoirs</strong> pour sensibiliser et éduquer la communauté.
+        </p>
+        <p class="text-gray-700 text-base md:text-lg leading-relaxed mb-8">
+            Chacune de vos idées est précieuse pour nous. Que vous souhaitiez participer à nos événements ou proposer de nouvelles initiatives, nous serons ravis de vous accueillir. Ensemble, nous pouvons créer un changement durable et renforcer les liens sociaux autour d'une cause commune : la préservation de notre planète.
+        </p>
+        <!-- Bouton de contact -->
+        <a href="mailto:contact@acdc-bouchemaine.fr" class="inline-block bg-green-500 text-white font-semibold py-3 px-6 rounded-lg shadow-lg hover:bg-green-600 transition-colors duration-300">
+            Rejoignez-nous
+        </a>
+    </div>
+</section>
+
 
 <!-- Sections -->
-<section id="accueil" class="h-screen bg-green-50 pt-16">
-    <h2 class="text-center text-4xl mt-24">Accueil</h2>
+<!--<section id="accueil" class="h-screen bg-green-50 pt-16">-->
+<!--    <h2 class="text-center text-4xl mt-24">Accueil</h2>-->
+<!--</section>-->
+
+<!-- Section Actions -->
+<section id="actions" class="bg-gray-50 py-16">
+    <div class="container mx-auto px-4">
+        <h2 class="text-2xl md:text-4xl font-bold text-center text-green-700 mb-12">Nos Actions</h2>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+            <!-- Card 1: Repair Café -->
+            <div class="bg-white border border-gray-200 rounded-lg shadow-lg overflow-hidden">
+                <img src="images/repair-cafe.jpeg" alt="Repair Café" class="w-full h-60 object-cover">
+                <div class="p-6">
+                    <h3 class="text-xl font-bold text-green-700 text-center mb-4">Repair Café</h3>
+                    <p class="text-gray-700">
+                        Apprendre à réparer plutôt que jeter, tel est l’objectif principal d’un repair café.
+                        Chaque mois, retrouvez l’équipe de bénévoles pour des sessions réparation : vélo, électroménager, bricolage.
+                        Vous avez des compétences et aimez bricoler ? Contactez-nous !
+                    </p>
+                </div>
+            </div>
+
+            <!-- Card 2: Opération pièges à frelon asiatique -->
+            <div class="bg-white border border-gray-200 rounded-lg shadow-lg overflow-hidden">
+                <img src="images/piege-frelon.jpg" alt="Opération pièges à frelon asiatique" class="w-full h-60 object-cover">
+                <div class="p-6">
+                    <h3 class="text-xl font-bold text-green-700 text-center mb-4">Opération pièges à frelon asiatique</h3>
+                    <p class="text-gray-700">
+                        Les frelons asiatiques sont des prédateurs redoutables, notamment pour les abeilles.
+                        Le piégeage au bon moment avec des équipements sélectifs permet de réduire les populations de frelons.
+                        L’atelier consiste à la réalisation de pièges à partir de récup et de grilles spéciales frelons.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Card 3: Plantations d’arbres fruitiers -->
+            <div class="bg-white border border-gray-200 rounded-lg shadow-lg overflow-hidden">
+                <img src="images/plantation-arbres.jpeg" alt="Plantations d’arbres fruitiers" class="w-full h-60 object-cover">
+                <div class="p-6">
+                    <h3 class="text-xl font-bold text-green-700 text-center mb-4">Plantations d’arbres fruitiers</h3>
+                    <p class="text-gray-700">
+                        Initiée en 2023, l’opération « plantons des arbres » a permis la plantation de 450 arbres fruitiers tels que pommiers, pêchers, pruniers et cerisiers.
+                        Un nouveau projet « plantons des arbres » et « troc de plants » est prévu en décembre 2024.
+                        Jardinier amateur ou confirmé, rejoignez le groupe « arbre » !
+                    </p>
+                </div>
+            </div>
+
+            <!-- Card 4: Échanges de savoir -->
+            <div class="bg-white border border-gray-200 rounded-lg shadow-lg overflow-hidden">
+                <img src="images/echanges-savoir.jpeg" alt="Échanges de savoir" class="w-full h-60 object-cover">
+                <div class="p-6">
+                    <h3 class="text-xl font-bold text-green-700 text-center mb-4">Échanges de savoir</h3>
+                    <p class="text-gray-700">
+                        Venez partager et transmettre vos connaissances : couture, recettes de cuisine, zéro déchet, jardinage, bricolage.
+                        Sous forme d’ateliers en petit groupe, venez échanger et partager avec d'autres personnes curieuses d'apprendre.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
-<section id="actions" class="h-screen bg-gray-50 pt-16">
-    <h2 class="text-center text-4xl mt-24">Nos Actions</h2>
+<!--<section id="actions" class="h-screen bg-gray-50 pt-16">-->
+<!--    <h2 class="text-center text-4xl mt-24">Nos Actions</h2>-->
+<!--</section>-->
+
+<!-- Section Association -->
+<section id="association" class="bg-white py-16">
+    <div class="container mx-auto px-4 text-center md:text-left">
+        <h2 class="text-2xl md:text-4xl font-bold text-green-700 mb-8 text-center">L’Association</h2>
+
+        <p class="text-gray-700 text-lg leading-relaxed mb-8">
+            L’Atelier Citoyen Durable et Coopératif « <strong>ACDC</strong> » est une association loi 1901 créée en 2024 à Bouchemaine.
+        </p>
+
+        <p class="text-gray-700 text-lg leading-relaxed mb-8">
+            <strong>Objet de l'association :</strong> Cette association a pour but de promouvoir et réaliser des actions en faveur de l’environnement, de la consommation responsable et de l’éco-citoyenneté à Bouchemaine et alentours. Elle vise à encourager le public à adopter des modes de vie durables, à consommer de manière responsable, et à protéger l’environnement. À travers des campagnes d’information, des ateliers pratiques, des évènements et des conférences, l'association a également pour objectif de rassembler les citoyens pour promouvoir le développement social et culturel, créer des liens sociaux solides au sein de la communauté locale, pour favoriser l'expression des besoins et l'initiative des habitants.
+        </p>
+
+        <p class="text-gray-700 text-lg leading-relaxed mb-8">
+            Enfin, l’association coopère avec toutes les organisations partageant les mêmes valeurs pour mener des actions conjointes, échanger sur des pratiques durables et se faire le relais des initiatives locales. L’association exerce toutes les activités et accomplit toutes les opérations tendant à réaliser cet objet, en France et à l’étranger.
+        </p>
+
+        <p class="text-gray-700 text-lg leading-relaxed mb-8">
+            <strong>À noter :</strong> Les membres fondateurs ont décidé d’administrer l’association ACDC en <u>INSTANCE COLLEGIALE</u>. Les décisions, le fonctionnement et la gestion de l’association sont partagés entre les membres de cette instance collégiale. C'est une nouvelle manière démocratique de faire fonctionner l’association : souple, dynamique et motivante.
+        </p>
+
+        <p class="text-gray-700 text-lg leading-relaxed mb-8">
+            L’adhésion à ACDC permet de soutenir les initiatives portées par l’association. Elle permet également de prendre part aux actions et événements proposés par les membres d’ACDC. Elle permet surtout de pouvoir s’investir dans des projets concrets avec d’autres bénévoles.
+        </p>
+
+        <p class="text-gray-700 text-lg leading-relaxed">
+            ACDC reçoit également les dons.
+        </p>
+    </div>
 </section>
 
-<section id="association" class="h-screen bg-green-50 pt-16">
-    <h2 class="text-center text-4xl mt-24">L'Association</h2>
+
+<!--<section id="association" class="h-screen bg-green-50 pt-16">-->
+<!--    <h2 class="text-center text-4xl mt-24">L'Association</h2>-->
+<!--</section>-->
+
+<!--<section id="equipe" class="h-screen bg-gray-50 pt-16">-->
+<!--    <h2 class="text-center text-4xl mt-24">L'Équipe</h2>-->
+<!--</section>-->
+
+<!-- Section Agenda -->
+<section id="agenda" class="bg-gray-50 py-16">
+    <div class="container mx-auto px-4">
+        <h2 class="text-2xl md:text-4xl font-bold text-center text-green-700 mb-12">Agenda</h2>
+
+        <!-- Carte pour le 5 octobre -->
+        <div class="flex flex-col w-full bg-white rounded-lg shadow-lg md:flex-row mb-8">
+            <div class="flex flex-row justify-around p-4 font-bold leading-none text-white uppercase bg-gray-500 rounded-t-lg md:flex-col md:items-center md:justify-center md:w-1/4 md:rounded-l-lg md:rounded-t-none">
+                <div class="md:text-6xl">5</div>
+                <div class="md:text-3xl">Octobre</div>
+                <div class="md:text-xl">10h & 15h</div>
+            </div>
+            <div class="p-6 font-normal text-gray-800 md:w-3/4">
+                <h3 class="mb-4 text-xl md:text-2xl font-bold leading-none tracking-tight text-green-700">Fabrication de pièges à frelon</h3>
+                <p class="leading-relaxed">
+                    Retrouvez-nous le 5 octobre pour un atelier dédié à la fabrication de pièges à frelon asiatique.
+                    Cet atelier aura lieu à Bouchemaine, et vous y apprendrez à réaliser des pièges efficaces tout en utilisant des matériaux de récupération.
+                    Rejoignez-nous pour contribuer à la lutte contre ce prédateur des abeilles.
+                </p>
+                <p class="leading-relaxed text-gray-700">
+                    Une participation minimale de 6 € est demandée, payable en espèces ou par chèques.
+                </p>
+                <p class="mt-4 text-gray-600">Lieu : Miel et Loire à Bouchemaine, portes ouvertes du producteur</p>
+            </div>
+        </div>
+
+        <!-- Carte pour le 6 octobre -->
+        <div class="flex flex-col w-full bg-white rounded-lg shadow-lg md:flex-row">
+            <div class="flex flex-row justify-around p-4 font-bold leading-none text-white uppercase bg-gray-500 rounded-t-lg md:flex-col md:items-center md:justify-center md:w-1/4 md:rounded-l-lg md:rounded-t-none">
+                <div class="md:text-6xl">6</div>
+                <div class="md:text-3xl">Octobre</div>
+                <div class="md:text-xl">10h & 15h</div>
+            </div>
+            <div class="p-6 font-normal text-gray-800 md:w-3/4">
+                <h3 class="mb-4 text-xl md:text-2xl font-bold leading-none tracking-tight text-green-700">Fabrication de pièges à frelon</h3>
+                <p class="leading-relaxed">
+                    Retrouvez-nous le 6 octobre pour un atelier dédié à la fabrication de pièges à frelon asiatique.
+                    Cet atelier aura lieu à Bouchemaine, et vous y apprendrez à réaliser des pièges efficaces tout en utilisant des matériaux de récupération.
+                    Rejoignez-nous pour contribuer à la lutte contre ce prédateur des abeilles.
+                </p>
+                <p class="leading-relaxed text-gray-700">
+                    Une participation minimale de 6 € est demandée, payable en espèces ou par chèques.
+                </p>
+                <p class="mt-4 text-gray-600">Lieu : Miel et Loire à Bouchemaine, portes ouvertes du producteur</p>
+            </div>
+        </div>
+    </div>
 </section>
 
-<section id="equipe" class="h-screen bg-gray-50 pt-16">
-    <h2 class="text-center text-4xl mt-24">L'Équipe</h2>
-</section>
+<!--<section id="agenda" class="h-screen bg-green-50 pt-16">-->
+<!--    <h2 class="text-center text-4xl mt-24">Agenda</h2>-->
+<!--</section>-->
 
-<section id="agenda" class="h-screen bg-green-50 pt-16">
-    <h2 class="text-center text-4xl mt-24">Agenda</h2>
-</section>
+<!--<section id="documentation" class="h-screen bg-gray-50 pt-16">-->
+<!--    <h2 class="text-center text-4xl mt-24">Documentation</h2>-->
+<!--</section>-->
 
-<section id="documentation" class="h-screen bg-gray-50 pt-16">
-    <h2 class="text-center text-4xl mt-24">Documentation</h2>
-</section>
+<!-- Footer -->
+<div class="border-t border-green-500 w-full my-4"></div>
+<footer class="py-8">
+    <div class="container mx-auto px-4 text-center">
+        <p class="text-gray-600 text-sm mb-4">
+            &copy; 2024 Atelier Citoyen Durable et Coopératif (ACDC). Tous droits réservés.
+        </p>
+        <p class="text-gray-600 text-sm">
+            <a href="mailto:contact@acdc-bouchemaine.fr" class="text-green-700 hover:text-green-800">contact@acdc-bouchemaine.fr</a>
+        </p>
+    </div>
+</footer>
+
+
 
 <!-- JavaScript for Active Menu Highlight, Burger Menu, and Scroll Handling -->
 <script>
@@ -109,7 +289,8 @@
             const targetSection = document.getElementById(targetId);
             const headerHeight = header.offsetHeight;
             const isMobile = window.innerWidth < 768;
-            const scrollOffset = isMobile ? headerHeight - 450 : headerHeight -100;
+            //const scrollOffset = isMobile ? headerHeight - 450 : headerHeight -100;
+            const scrollOffset = isMobile ? headerHeight - 20 : headerHeight + 100;
 
             window.scrollTo({
                 top: targetSection.offsetTop - scrollOffset,
